# rutabaga

./: .dockerignore  .gitignore  Dockerfile  README.md  classes.py  construction_gdf_ENSAE.py  extraction_pamplemousse.py  main.py  plan_virtuel_rutabaga.gpkg  pyproject.toml  requirements.txt  salles_ensae.csv  tests_salles.py
app/: app.py
app/static/css/: style.css
app/static/data/: plan_virtuel_rutabaga.geojson
app/templates/: carte_salle.html  connexion.html  connexion_new.html  home.html  home_new.html  map.html  map_improved.html
misc_docs/: onglets_desc.md  specifications_design.md
rooms/: construction_gdf_ENSAE.py  get_rooms.py  plan_virtuel_rutabaga.gpkg  salles.py  users.py
tests/: tests_salles.py
