[project]
name = "rutabaga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "easyocr>=1.7.2",
    "flask>=3.1.2",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pytz>=2025.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "pytest>=9.0.1",
]
